# simplepush-python

./: LICENSE.txt  README.md  README.rst  pyproject.toml  setup.py
simplepush/: __init__.py
src/simplepush/: __init__.py  simplepush.py
